fix page info wraping in mobile

--- a/src/components/Pagination/Pagination.css
+++ b/src/components/Pagination/Pagination.css
@@ -95,5 +95,12 @@
 
   .pagination-button-icon {
     display: block;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .page-info-text {
+    display: none;
   }
 }
